# Python-Package

./: .coverage  .pre-commit-config.yaml  README.md  main.py  pyproject.toml
.github/workflow/: sphinx_doc.yaml  tests.yaml
docs/source/: conf.py  index.rst
src/package_creation_tutorial/: string_ops.py
src/skander_package_tutorial/: string_ops.py
tests/: test.py
