[project]
name = "skander_package_tutorial"
version = "0.0.1"
authors = [
    {name = "skan652",email = "skander.afi@dauphine.tn"}
]
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "pytest (>=9.0.2,<10.0.0)",
    "pytest-cov (>=7.0.0,<8.0.0)",
    "ruff (>=0.14.13,<0.15.0)",
    "pre-commit (>=4.5.1,<5.0.0)",
    "sphinx (>=9.1.0,<10.0.0)",
    "sphinx-rtd-theme (>=3.1.0,<4.0.0)"
]

[tool.poetry]
packages = [{include = "skander_package_tutorial", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
